move other client config out from acme client